@@ -4,13 +4,15 @@ Changelog
 1.0.6 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Allow regular GET and POST on elements (action elements make a redirect,
+  other elements just return the result).
+  [ebrehault]
 
 
 1.0.5 (2016-04-09)
 ------------------
 
-- Allow POST to element
+- Allow REST POST to element
   [simon-previdente]
 
 - Raise compilation and execution errors
